Make sure new PDF download button is not shown on mobile

--- a/servers/cms/output/static/css/uncompressed/lb.css
+++ b/servers/cms/output/static/css/uncompressed/lb.css
@@ -1565,6 +1565,9 @@ ul.authorsByLetter li ul li {
 		margin-left: -10px;
 	}
 
+	#download-pdf {
+		display: none;
+	}
 
 	#performSearch {
 		top: 3px;
